--- a/CuritibaPlaces/CuritibaPlaces.View/MainWindow.xaml
+++ b/CuritibaPlaces/CuritibaPlaces.View/MainWindow.xaml
@@ -5,12 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CuritibaPlaces.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="301.25" Width="242.5">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="87*"/>
+            <RowDefinition Height="185*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="9*"/>
-            <ColumnDefinition Width="38*"/>
+            <ColumnDefinition Width="Auto"/>
+
         </Grid.ColumnDefinitions>
+        <TextBox x:Name="textBoxLogin" HorizontalAlignment="Left" Height="27" Margin="83,3.5,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Background="{x:Null}" Grid.Row="1" />
+        <TextBlock HorizontalAlignment="Left" Margin="57,30,0,0" TextWrapping="Wrap" Text="Curitiba Places" VerticalAlignment="Top" Height="29" Width="147" FontFamily="Pescadero" Foreground="Blue" FontSize="21" />
+        <Label Content="Usuário" HorizontalAlignment="Left" Margin="10,3.5,0,0" VerticalAlignment="Top" Height="27" Width="73" Foreground="Blue" FontFamily="Arial" RenderTransformOrigin="0.476,0.552" Grid.Row="1"/>
+        <Label Content="Senha" HorizontalAlignment="Left" Margin="10,51.5,0,0" VerticalAlignment="Top" Height="32" Width="55" Foreground="Blue" Grid.Row="1"/>
+        <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Margin="84,51.5,0,0" VerticalAlignment="Top" Height="32" Width="120" Grid.Row="1"/>
+
+        <Button x:Name="btnRegister" Content="Cadastre-se" HorizontalAlignment="Left" Margin="10,112.5,0,0" VerticalAlignment="Top" Width="86" Height="27" Foreground="Blue" Background="LightCoral" Click="btnRegister_Click" Grid.Row="1"/>
+        <Button x:Name="btnLogin" Content="Login" HorizontalAlignment="Left" Margin="134,112.5,0,0" VerticalAlignment="Top" Width="85" Height="27" Foreground="Blue" Background="LightCoral" Click="button_Click" Grid.Row="1"/>
+          
 
     </Grid>
 </Window>
